--- a/Redis/Redis_TextMining_dataInput.ipynb
+++ b/Redis/Redis_TextMining_dataInput.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -29,8 +29,8 @@
     "'''\n",
     "建立連線，輸入相關參數即可\n",
     "'''\n",
-    "def connect4Input(host, port, db):\n",
-    "    connection = redis.Redis(host = host, port = port, db = db)\n",
+    "def connect4Input(host, port, db, password):\n",
+    "    connection = redis.Redis(host = host, port = port, db = db, password = password)\n",
     "    print 'Connection: %s' % True\n",
     "    return connection\n",
     "\n",
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -75,16 +75,16 @@
      "text": [
       "Connection: True\n",
       "Data is finished to input in Redis!!\n",
-      "Time Cost: 3.819000 sec.\n"
+      "Time Cost: 4.090000 sec.\n"
      ]
     }
    ],
    "source": [
-    "path = r'D:\\BigData\\Python\\Workspace\\TextMining\\Project\\txtFiles\\totalAtriclesResult\\test.json'\n",
+    "path = r'D:\\BigData\\Python\\Workspace\\TextMining\\Project\\txtFiles\\totalAtriclesResult\\final_result_proportion.json'\n",
     "with open(path) as dataRead:\n",
     "    start = time.time()\n",
     "    result = json.load(dataRead)\n",
-    "    connection = connect4Input(host = '36.236.58.48', port = 6379, db = 0)\n",
+    "    connection = connect4Input(host = '140.115.236.201', port = 6379, db = 0, password = '123456')\n",
     "    ready2Input(connection, result)\n",
     "    end = time.time()\n",
     "    print 'Data is finished to input in Redis!!'\n",
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -109,8 +109,8 @@
     "'''\n",
     "取得連線，並回傳連線物件\n",
     "'''\n",
-    "def connect4Query(host, port, db):\n",
-    "    myServer = redis.Redis(host = host, port = port, db = db)\n",
+    "def connect4Query(host, port, db, password):\n",
+    "    myServer = redis.Redis(host = host, port = port, db = db, password = password)\n",
     "    print 'Connection: %s' % True\n",
     "    return myServer\n",
     "\n",
@@ -142,16 +142,16 @@
     "def start():\n",
     "    textRank = list()\n",
     "    tourAgency = raw_input(u'請輸入你要查詢的旅行社: ')\n",
-    "    myServer = connect4Query(host = '36.236.58.48', port = 6379, db = 0)\n",
+    "    myServer = connect4Query(host = '36.236.48.175', port = 6379, db = 0, password = None)\n",
     "    new_result = changeType2SortData(myServer, tourAgency, 15)\n",
     "    for count_word, word_count in new_result:\n",
-    "        textRank.append({'word':count_word, 'wordcount':word_count})\n",
+    "        textRank.append({'emotion_word':count_word, 'word_count':word_count})\n",
     "    return textRank"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -160,31 +160,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "請輸入你要查詢的旅行社: phoenix\n",
+      "請輸入你要查詢的旅行社: ftsTour\n",
       "Connection: True\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[{'word': u'\\u512a\\u60e0', 'wordcount': 226},\n",
-       " {'word': u'\\u597d', 'wordcount': 127},\n",
-       " {'word': u'\\u63a8\\u85a6', 'wordcount': 115},\n",
-       " {'word': u'\\u4e0d\\u932f', 'wordcount': 62},\n",
-       " {'word': u'\\u4fbf\\u5b9c', 'wordcount': 55},\n",
-       " {'word': u'\\u4e0d\\u597d', 'wordcount': 28},\n",
-       " {'word': u'\\u5c08\\u696d', 'wordcount': 28},\n",
-       " {'word': u'\\u8cb4', 'wordcount': 27},\n",
-       " {'word': u'\\u5f88\\u597d', 'wordcount': 22},\n",
-       " {'word': u'\\u5f88\\u4e0d\\u932f', 'wordcount': 21},\n",
-       " {'word': u'\\u6bd4\\u8f03\\u597d', 'wordcount': 19},\n",
-       " {'word': u'\\u5dee', 'wordcount': 18},\n",
-       " {'word': u'\\u9ebb\\u7169', 'wordcount': 18},\n",
-       " {'word': u'\\u5f88\\u5dee', 'wordcount': 16},\n",
-       " {'word': u'\\u6700\\u597d', 'wordcount': 16}]"
+       "[{'emotion_word': u'\\u6700\\u597d', 'word_count': 0.513356},\n",
+       " {'emotion_word': u'\\u4e0d\\u932f', 'word_count': 0.420518},\n",
+       " {'emotion_word': u'\\u518d\\u9ebb\\u7169', 'word_count': 0.263851},\n",
+       " {'emotion_word': u'\\u5f88\\u6eff\\u610f', 'word_count': 0.165397},\n",
+       " {'emotion_word': u'\\u4fbf\\u5b9c', 'word_count': 0.160793},\n",
+       " {'emotion_word': u'\\u5c08\\u696d', 'word_count': 0.143383},\n",
+       " {'emotion_word': u'\\u53ea\\u6709\\u721b', 'word_count': 0.118177},\n",
+       " {'emotion_word': u'\\u6279\\u8a55', 'word_count': 0.106895},\n",
+       " {'emotion_word': u'\\u6bd4\\u8f03\\u597d', 'word_count': 0.106855},\n",
+       " {'emotion_word': u'\\u5f88\\u666e\\u901a', 'word_count': 0.09749},\n",
+       " {'emotion_word': u'\\u5f88\\u4e0d\\u8ca0\\u8cac\\u4efb', 'word_count': 0.089012},\n",
+       " {'emotion_word': u'\\u4e0d\\u5c08\\u696d', 'word_count': 0.071512},\n",
+       " {'emotion_word': u'\\u5f88\\u512a\\u60e0', 'word_count': 0.067198},\n",
+       " {'emotion_word': u'\\u9084\\u662f\\u58de', 'word_count': 0.063218},\n",
+       " {'emotion_word': u'\\u62b1\\u6028', 'word_count': 0.060265}]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
